[gd_scene load_steps=8 format=3 uid="uid://cwopvxphrfxu"]

[ext_resource type="Script" path="res://Multiplayer/multiplayer_game_scene.gd" id="1_nylgb"]
[ext_resource type="PackedScene" uid="uid://fj4ouhttn3x2" path="res://Player/player.tscn" id="2_3ny6l"]
[ext_resource type="PackedScene" uid="uid://brosirc5itm8c" path="res://Enemy/enemy_triangle.tscn" id="3_lwe78"]
[ext_resource type="Texture2D" uid="uid://u8cc0w46qmal" path="res://Images/BlackBackground.jpg" id="4_jxm1n"]
[ext_resource type="Script" path="res://Multiplayer/multiplayer_enemy_spawn.gd" id="5_afkdx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pk2ng"]
size = Vector2(13, 688)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tk63a"]
size = Vector2(1178, 20)

[node name="MultiplayerGameScene" type="Node2D"]
script = ExtResource("1_nylgb")
player_scene = ExtResource("2_3ny6l")
enemy_scene = ExtResource("3_lwe78")

[node name="Background" type="Node2D" parent="."]

[node name="WallCollision" type="StaticBody2D" parent="Background"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/WallCollision"]
position = Vector2(-6.5, 328)
shape = SubResource("RectangleShape2D_pk2ng")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Background/WallCollision"]
position = Vector2(1160, 320)
shape = SubResource("RectangleShape2D_pk2ng")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Background/WallCollision"]
position = Vector2(576, -8)
shape = SubResource("RectangleShape2D_tk63a")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Background/WallCollision"]
position = Vector2(576, 656)
shape = SubResource("RectangleShape2D_tk63a")

[node name="BlackBackground" type="Sprite2D" parent="Background"]
show_behind_parent = true
position = Vector2(576, 324)
scale = Vector2(4.44788, 3.34021)
texture = ExtResource("4_jxm1n")
metadata/_edit_lock_ = true

[node name="EnemySpawn" type="Node2D" parent="."]
script = ExtResource("5_afkdx")

[node name="Timer" type="Timer" parent="EnemySpawn"]

[node name="UI" type="Node2D" parent="."]

[node name="Error" type="Label" parent="UI"]
visible = false
offset_left = 408.0
offset_top = 536.0
offset_right = 744.0
offset_bottom = 578.0
theme_override_font_sizes/font_size = 30
text = "Room not created yet"

[node name="Buttons" type="Node2D" parent="."]

[node name="HostButton" type="Button" parent="Buttons"]
offset_left = 408.0
offset_top = 152.0
offset_right = 743.0
offset_bottom = 232.0
theme_override_font_sizes/font_size = 40
text = "Host"

[node name="JoinButton" type="Button" parent="Buttons"]
offset_left = 408.0
offset_top = 280.0
offset_right = 743.0
offset_bottom = 361.0
theme_override_font_sizes/font_size = 40
text = "Join
"

[node name="BackButton" type="Button" parent="Buttons"]
offset_left = 408.0
offset_top = 408.0
offset_right = 743.0
offset_bottom = 489.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Back"

[node name="StartButton" type="Button" parent="Buttons"]
visible = false
offset_left = 408.0
offset_top = 280.0
offset_right = 743.0
offset_bottom = 361.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Player/player.tscn", "res://Enemy/enemy_triangle.tscn")
spawn_path = NodePath("..")

[connection signal="timeout" from="EnemySpawn/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Buttons/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Buttons/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Buttons/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_start_button_pressed"]
